@@ -1,3 +1,10 @@
+openmolar (0.3.2+bzr0799-0~__DIST__0) __DIST__; urgency=low
+
+  * bug fixes
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 04 Feb 2013 12:24:01 +0000
+
+
 openmolar (0.3.2+bzr0798-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release (invokes a schema change)
